[package]
name = "tronscan-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde_json = "1.0.114"
reqwest = "0.12.3"
surrealdb = "1.3.1"
serde = { version = "1.0.197", features = ["derive"] }
