[package]
name = "blockchain-specifire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde_json = "1.0.114"
reqwest = { version = "0.12.3", features = ["json"] }
#surrealdb = "1.3.1"
serde = { version = "1.0.197", features = ["derive"] }
#diesel = {version =  "2.1.6" , features= ["mysql"] }
dotenv = "0.15.0"
csv = "1.3.0"
tokio = {version = "1.38.0" , features = ["full"]}
curve25519-dalek = "4.1.3"
rocket_cors = "0.6.0"
mysql_async = "0.34.2"
mysql = "25.0.1"




